--- a/Android/AguaSmart/app/src/main/AndroidManifest.xml
+++ b/Android/AguaSmart/app/src/main/AndroidManifest.xml
@@ -3,11 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.aguasmart">
 
-    <!-- Permisos necesarios -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+
 
     <application
         android:name=".MyApp"
@@ -25,7 +30,11 @@
             android:name=".MqttService"
             android:exported="false" />
 
-        <!-- Activity principal -->
+        <service
+            android:name=".GpsService"
+            android:exported="false"
+            android:foregroundServiceType="location" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -35,7 +44,6 @@
             </intent-filter>
         </activity>
 
-        <!-- Otras activities de tu app -->
         <activity android:name=".ConsumoActivity" />
 
     </application>
