--- a/Android/AguaSmart/app/src/main/AndroidManifest.xml
+++ b/Android/AguaSmart/app/src/main/AndroidManifest.xml
@@ -9,6 +9,19 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <!-- IMPORTANTE: ambas ubicaciones si las declaraste en manifest, porque BLE puede requerirlas -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"
+        tools:ignore="ForegroundServicesPolicy" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -24,6 +37,11 @@
         <service
             android:name=".MqttService"
             android:exported="false" />
+
+        <service
+            android:name=".ProximityService"
+            android:exported="false"
+            android:foregroundServiceType="location" />
 
         <!-- Activity principal -->
         <activity
